--- a/SiemMqtt/SiemApp/templates/sidebar.html
+++ b/SiemMqtt/SiemApp/templates/sidebar.html
@@ -1,8 +1,42 @@
 <div class="sidebar">
-    <ul>
-        <li><a href="{% url 'logs' %}">Logs</a></li>
-        <li><a href="{% url 'threats_page' %}">Threats</a></li>
-        <li><a href="{% url 'rules_page' %}">Rules</a></li>
-        <li><a href="{% url 'device_list' %}">Devices</a></li>
-    </ul>
+    <div class="sidebar-header">
+        <div class="logo">
+            <i class="fas fa-shield-alt"></i>
+            <h2>MQTT SIEM</h2>
+        </div>
+    </div>
+    <div class="sidebar-menu">
+        <ul>
+            <li class="{% if 'logs' in request.path %}active{% endif %}">
+                <a href="{% url 'logs' %}">
+                    <i class="fas fa-list-ul"></i>
+                    <span>Logs</span>
+                </a>
+            </li>
+            <li class="{% if 'threats' in request.path %}active{% endif %}">
+                <a href="{% url 'threats' %}">
+                    <i class="fas fa-exclamation-triangle"></i>
+                    <span>Threats</span>
+                </a>
+            </li>
+            <li class="{% if 'rules' in request.path %}active{% endif %}">
+                <a href="{% url 'rules' %}">
+                    <i class="fas fa-gavel"></i>
+                    <span>Rules</span>
+                </a>
+            </li>
+            <li class="{% if 'devices' in request.path %}active{% endif %}">
+                <a href="{% url 'device_list' %}">
+                    <i class="fas fa-microchip"></i>
+                    <span>Devices</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="sidebar-footer">
+        <div class="system-status">
+            <div class="status-indicator online"></div>
+            <span>System Online</span>
+        </div>
+    </div>
 </div>
